--- a/login.html
+++ b/login.html
@@ -9,5 +9,45 @@
     <form id="form">
     <input type="text" name="email" id="name"><input type="password" name="password" id="password">
     </form>
+    <div id="responseMessage"></div>
+    <script>
+        // Select the form and response message div
+const loginForm = document.getElementById("form");
+const responseMessage = document.getElementById("responseMessage");
+
+// Add an event listener to handle the form submission
+loginForm.addEventListener("submit", async (event) => {
+  event.preventDefault(); // Prevent the form from refreshing the page
+
+  // Get the form data
+  const username = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  try {
+    // Send the login request to the API
+    const response = await fetch("https://online-store-rzqt.onrender.com/api/login", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({ username, password }),
+    });
+
+    // Handle the response
+    if (response.ok) {
+      const data = await response.json();
+      responseMessage.innerText = `Login successful! Token: ${data.token}`;
+      console.log(data); // Use the token or other returned data as needed
+    } else {
+      const error = await response.json();
+      responseMessage.innerText = `Error: ${error.message || "Login failed"}`;
+    }
+  } catch (err) {
+    responseMessage.innerText = `Error: ${err.message}`;
+    console.error(err);
+  }
+});
+
+    </script>
 </body>
 </html>
