--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
 <body>
     <form id="form">
     <input type="text" name="email" id="name"><input type="password" name="password" id="password">
+    <button type="submit">Login</button>
     </form>
     <div id="responseMessage"></div>
     <script>
