--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <form id="loginForm">
-        <label for="email">email:</label>
-        <input type="text" id="email" name="email" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
         <br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
@@ -16,24 +16,22 @@
         <button type="submit">Login</button>
       </form>
     
-      <div id="responseMessage"></div>
-      <div id="state"></div>
+      <div id="responseMessage" style="margin-top: 20px; color: green;"></div>
     <script>
-        // Select the form and response message div
-// Select the form and response message div
+        // Select the form and the response message div
 const loginForm = document.getElementById("loginForm");
 const responseMessage = document.getElementById("responseMessage");
 
-// Add an event listener to handle the form submission
+// Add event listener for form submission
 loginForm.addEventListener("submit", async (event) => {
-  event.preventDefault(); // Prevent the form from refreshing the page
+  event.preventDefault(); // Prevent default form submission
 
-  // Get the form data
+  // Get the email and password values from the form
   const email = document.getElementById("email").value;
   const password = document.getElementById("password").value;
 
   try {
-    // Send the login request to the API
+    // Send POST request to the login API
     const response = await fetch("https://online-store-rzqt.onrender.com/api/login", {
       method: "POST",
       headers: {
@@ -41,23 +39,27 @@ loginForm.addEventListener("submit", async (event) => {
       },
       body: JSON.stringify({ email, password }),
     });
-     document.getElementById("state").value = response.status
 
     // Handle the response
     if (response.ok) {
       const data = await response.json();
+      responseMessage.style.color = "green";
       responseMessage.innerText = `Login successful! Token: ${data.token}`;
-      console.log(data); // Use the token or other returned data as needed
+      console.log("Token:", data.token);
+
+      // Optionally, store the token (e.g., in localStorage)
+      localStorage.setItem("authToken", data.token);
     } else {
-      const error = await response.json();
-      responseMessage.innerText = `Error: ${error.message || "Login failed"}`;
+      const errorData = await response.json();
+      responseMessage.style.color = "red";
+      responseMessage.innerText = `Error1: ${errorData.message || "Invalid credentials"}`;
     }
-  } catch (err) {
-    responseMessage.innerText = `Error: ${err.message}`;
-    console.error(err);
+  } catch (error) {
+    responseMessage.style.color = "red";
+    responseMessage.innerText = `Error2: ${error.message}`;
+    console.error("Error2:", error);
   }
 });
-
 
     </script>
 </body>
